# tdt4260_cmb

./: CMakeLists.txt  Makefile  checker.c  image_processing_c.c  image_processing_opencl.cl  image_processing_opencl.cpp  image_processing_reference.c
